Update java9 logic (#54)