@@ -205,8 +205,8 @@ final class CheckerFrameworkPlugin implements Plugin<Project> {
                     project.property('sourceCompatibility')
 
     // Check Java version.
-    if (javaVersion.java7) {
-      throw new IllegalStateException("The Checker Framework does not support Java 7.")
+    if (!javaVersion.isJava8Compatible()) {
+      throw new IllegalStateException("The Checker Framework does not support Java versions before 8.")
     }
 
     // Apply checker to project
@@ -256,6 +256,15 @@ final class CheckerFrameworkPlugin implements Plugin<Project> {
               "-Xbootclasspath/p:${project.configurations.errorProneJavac.asPath}".toString()
             ]
           }
+
+          // When running on Java 9+ code, the Checker Framework needs reflective access
+          // to some JDK classes. Pass the arguments that make that possible.
+          if (javaVersion.isJava9Compatible()) {
+            compile.options.forkOptions.jvmArgs += [
+                    "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"
+            ]
+          }
+
           compile.options.compilerArgs += [
             "-Xbootclasspath/p:${project.configurations.checkerFrameworkAnnotatedJDK.asPath}".toString()
           ]
